# friday_ink

./: .gitmodules  README.md
Firmware/: Cargo.toml
Firmware/.cargo/: config.toml
Firmware/src/: assets.rs  bluetooth.rs  config.rs  display.rs  gpio.rs  lib.rs  main.rs  power.rs  regs.rs  rtc.rs  softwire.rs
Firmware/u8g2_rs/: Cargo.toml  build.rs
Firmware/u8g2_rs/.cargo/: config.toml
Firmware/u8g2_rs/font/: font.h  u8g2_font_fusion_pixel_16_mn.c
Firmware/u8g2_rs/src/: lib.rs
