[package]
name = "u8g2_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.65"

# [env]
# CC = { value = "C:\MounRiver\MRS_Community\toolchain\RISC-VEmbeddedGCC12\bin\riscv-none-embed-gcc.exe", force = true }
# AR = { value = "C:/MounRiver/MRS_Community/toolchain/RISC-VEmbeddedGCC12/bin/riscv-none-elf-ar.exe", force = true }
